// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PartialHighlighter component should highlight inner parts correctly 1`] = `
<div>
  <span
    key="0"
  >
    Lorem 
  </span>
  <mark
    className="highlight"
    key="1"
  >
    ipsum
  </mark>
  <span
    key="2"
  >
     dolor 
  </span>
  <mark
    className="highlight"
    key="3"
  >
    sit
  </mark>
  <span
    key="4"
  >
     amet
  </span>
</div>
`;

exports[`PartialHighlighter component should highlight outer parts correctly 1`] = `
<div>
  <mark
    className="highlight"
    key="0"
  >
    Lorem
  </mark>
  <span
    key="1"
  >
     ipsum dolor sit 
  </span>
  <mark
    className="highlight"
    key="2"
  >
    amet
  </mark>
</div>
`;
